--- a/style.css
+++ b/style.css
@@ -100,6 +100,8 @@ body {
   flex-shrink: 0;
   height: 55px;
   align-items: center;
+  transition: 0.3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
 }
 
 .users-list::-webkit-scrollbar {
